
The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.917 devel

***   Workaround GCC/clang bug with huge compile times, bug1248.

****  Support > 64 bit decimal $display.

****  Support DPI time and svLogicVal. [Victor Besyakov]
      Note older version incorrectly assumed svBitVal even for logicals.

****  Support string len() method. [Victor Besyakov]

****  Fix modport outputs being treated as inputs, bug1246. [Jeff Bush]

****  Fix false ALWCOMBORDER on interface references, bug1247. [Josh Redford]

****  Fix constant propagation across DPI imports of inout strings. [Victor Besyakov]

****  Fix resolving inline nested interface names, bug1250. [Arjen Roodselaar]


* Verilator 3.916 2017-11-25

***   Support self-recursive modules, bug659. [Sean Moore, et al]

***   Support $error/$warning in elaboration time blocks.

***   Support $size/$bits/etc on type references.

***   Add error when driving input-only modport, bug1110. [Trevor Elbourne]

***   Add BSSPACE and COLONPLUS lint warnings.

****  Detect MSB overflow when under VL_DEBUG, bug1238. [Junyi Xi]

****  Add data types to --xml. [Rui Terra]

****  Fix partial slicing with pattern assignments, bug991. [Johan Bjork]

****  Fix false unused warning on interfaces, bug1241. [Laurens van Dam]

****  Fix error on "unique case" with no cases.

****  Fix MacOS portability, bug1232. [Jeff Bush]


* Verilator 3.914 2017-10-14

**    Added new examples/ directory with appropriate examples. This replaces the
      old test_c and test_sc directories.

***   Add --getenv option for simplifying Makefiles.

***   Add --x-initial option for specifying initial value assignment behavior.

***   Add --no-relative-cfuncs and related default optimization, bug1224. [John Coiner]

***   Add /*verilator tag*/ for XML extraction applications. [Chris Randall]

****  The internal test_verilated test directory is moved to be part of test_regress.
